<resources>
    <string name="app_name">ApiIntigration</string>
    <string name="Logout_btn">Log out</string>
    <string name="Login_btn">Login</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="randomJokeButtonText">Random Joke</string>
    <string name="randomMtgButtonText">Random MTG Card</string>
    <string name="generateJokeBtnText">Generate new joke</string>
    <string name="ImageViewDescriptionText">Shows a random Mtg Card</string>
    <string name="randomMtgCardUrl">URL for the card...</string>

</resources>